@@ -1,3 +1,11 @@
+ZEsarUX 13.0 - xxx edition. 26 Septiembre 2025
+
+Agregada opción para ordenar automaticámente los iconos en ZX Desktop
+
+----
+
+
+
 ZEsarUX 12.1 - Night Shift edition. 25 Septiembre 2025
 
 * Cosas nuevas agregadas:
