@@ -3649,6 +3649,8 @@ int util_write_configfile(void)
 
     if (zxdesktop_configurable_icons_enabled.v==0)      ADD_STRING_CONFIG,"--zxdesktop-disable-configurable-icons");
 
+    if (zxdesktop_automatic_reorder_icons.v)            ADD_STRING_CONFIG,"--zxdesktop-auto-order-icons");
+
     if (zxdesktop_empty_trash_on_exit.v)                ADD_STRING_CONFIG,"--zxdesktop-empty-trash-on-exit");
 
     if (zxdesktop_icon_show_app_open.v==0)              ADD_STRING_CONFIG,"--zxdesktop-no-show-indicators-open-apps");
