@@ -1,3 +1,11 @@
+ZEsarUX 13.0 - xxx edition. 26 September 2025
+
+Added setting to automatically order icons on ZX Desktop
+
+----
+
+
+
 ZEsarUX 12.1 - Night Shift edition. 25 September 2025
 
 * New things added:
